--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-tutorials/philipsHue/log.username
-tutorials/philipsHue/log.usernameError
-tutorials/philipsHue/log.lights
-tutorials/philipsHue/log.location
-tutorials/philipsHue/log.wget0
-tutorials/philipsHue/log.wget1
-tutorials/philipsHue/log.wget2
-tutorials/philipsHue/log.gssdp
+tutorials/philipsHue/log.*
+mk5*
+Mk5*
