--- a/tutorials/basic/blocks.cfg
+++ b/tutorials/basic/blocks.cfg
@@ -1,11 +1,15 @@
 # input from a file
-in1 ScaledInput 2.0 1.0 TimeFileInput in.dat
+line1 Line in1 node1 # connect the input to the output
+line2 Line node1 delay1
+line3 Line delay1 node2
+line4 Line node2 out1
+#in1 ScaleInput 2.0 1.0 TimeFileInput in.dat
+in1 TimeFileInput in.dat
+node2 Node
+delay1 Node
+node1 Node
+out1 FileOutput out.dat # output to a file
 
-# output to a file
-out1 FileOutput out.dat
-
-# connect the input to the output
-line1 Line in1 out1
 
 # end the program after 10 seconds
 time TimeStop 10s
