--- a/tutorials/basic/blocks.cfg
+++ b/tutorials/basic/blocks.cfg
@@ -1,15 +1,15 @@
 # input from a file
-line1 Line in1 node1 # connect the input to the output
-line2 Line node1 delay1
-line3 Line delay1 node2
-line4 Line node2 out1
+line1_ Line in1 node1_ # connect the input to the output
+line2_ Line node1 delay1
+line3_ Line delay1 node2
+line4_ Line node2 out1
 #in1 ScaleInput 2.0 1.0 TimeFileInput in.dat
 in1 TimeFileInput in.dat
-node2 Node
-delay1 Node
-node1 Node
+node2_ Node
+delay1_ Node
+node1_ Node
 out1 FileOutput out.dat # output to a file
 
 
 # end the program after 10 seconds
-time TimeStop 10s
+time_ TimeStop 10s
