--- a/tutorials/philipsHue/blocks.cfg
+++ b/tutorials/philipsHue/blocks.cfg
@@ -1,8 +1,12 @@
 in0 TimeFileInput in0.dat
-in1 TimeFileInput in1.dat
+in1 TimeFileInput in1.dat Cycle
 
 line1 Line in1 out1
+Line in1 out2
+Line in1 out3
 
-out1 PhilipsHueBridgeOutput 192.168.xxx.xxx xxx 1
+out1 PhilipsHueBridgeOutput 192.168.1.6 T08t2C8GF9KEqXYRI8PBzb3M6vDjteT3hxdERW8z 1
+out2 PhilipsHueBridgeOutput 192.168.1.6 T08t2C8GF9KEqXYRI8PBzb3M6vDjteT3hxdERW8z 2
+out3 PhilipsHueBridgeOutput 192.168.1.6 T08t2C8GF9KEqXYRI8PBzb3M6vDjteT3hxdERW8z 3
 
 time TimeStop 3m
