serial comm working, arduino tutorial

--- a/tutorials/arduino/blocks.cfg
+++ b/tutorials/arduino/blocks.cfg
@@ -1,2 +1,8 @@
-in1 TimeFileInput in.dat | \
+in0 ConstantInput 452 10  0  0 0 1 0 1 0 0 0  1 0 1 0 1 0 1 0  1 0 1 0 1 1 1 0
+#5 452 10  0  0 0 1 0 1 0 0 0  1 0 1 0 1 0 1 0  1 0 1 0 1 0 0 0
+in1 TimeFileInput in.dat Cycle Discrete 
+
+Line in1 out1 
 out1 SerialOutput /dev/ttyACM0 9600
+
+t TimeStop 3m
