--- a/tutorials/arduino/blocks.cfg
+++ b/tutorials/arduino/blocks.cfg
@@ -1,8 +1,3 @@
-#in0 ConstantInput 45 10  0  0 0 1 0 1 0 0 0  1 0 1 0 1 0 1 0  1 0 1 0 0 0 0 0
-#5 452 10  0  0 0 1 0 1 0 0 0  1 0 1 0 1 0 1 0  1 0 1 0 1 0 0 0
-i HttpInput 8080 1 | m MapNode code433MHz.dat Discrete | \
-o SerialOutput /dev/ttyACM0 9600
-
-i2 SerialInput /dev/ttyACM0 9600 4
-
-t TimeStop 3h
+in_ ConstantInput 150 148 148 148 148 148 148 148 148 148 148 148 148 148 148 148 148 148 148 148 148 148 148 148 148 | out_ ArduinoPWMOutput /dev/ttyACM0 9600 200
+#in ConstantInput 1 | out SerialOutput /dev/ttyACM0 9600
+in2 SerialInput /dev/ttyACM0 9600 8
