--- a/tutorials/arduino/blocks.cfg
+++ b/tutorials/arduino/blocks.cfg
@@ -1,3 +1,3 @@
-in_ ConstantInput 150 148 148 148 148 148 148 148 148 148 148 148 148 148 148 148 148 148 148 148 148 148 148 148 148 | out_ ArduinoPWMOutput /dev/ttyACM0 9600 2001
+#in_ ConstantInput 150 148 148 148 148 148 148 148 148 148 148 148 148 148 148 148 148 148 148 148 148 148 148 148 148 | out_ ArduinoPWMOutput /dev/ttyACM0 9600 2001
 #in ConstantInput 1 | out SerialOutput /dev/ttyACM0 9600
-in2 ArduinoPWMInput /dev/ttyACM0 9600 10 225 100
+in2 ArduinoPWMInput /dev/ttyACM0 9600 3 225 35 1000
