--- a/remoteEmbeddedSystems/arduino/duplexPWM/Makefile
+++ b/remoteEmbeddedSystems/arduino/duplexPWM/Makefile
@@ -6,5 +6,6 @@ F_CPU = 16000000
 ARDUINO_PORT = /dev/ttyACM0
 AVRDUDE_ARD_BAUDRATE = 115200
 AVRDUDE_ARD_PROGRAMMER = arduino
+OPTIMIZATION_LEVEL = 3
 
 include /usr/share/arduino/Arduino.mk
