--- a/tutorials/arduino/blocks.cfg
+++ b/tutorials/arduino/blocks.cfg
@@ -1,7 +1,39 @@
-#in_ ConstantInput 128 40 40 40 32 168 40 40 32 160 168 32 168 32 168 32 160 168 40 40 40 40 40 40 40 40 40 40 40 40 40 40 32 168 40 32 | out_ ArduinoPWMOutput /dev/ttyACM0 9600 200 50 5
-#in_ ConstantInput 128 5 2 129 64 129 80 40 20 8 20 10 129 2 160 64 160 84 10 5 2 129 64 160 80 40 20 10 5 2 129 64 160 80 32 84 10 4 0 0 0 0 0 0 | out_ ArduinoPWMOutput /dev/ttyACM0 9600 220 50 10
-#in_ ConstantInput 128 5 2 129 64 129 80 40 20 8 20 10 129 2 160 64 160 84 10 5 2 129 64 160 80 40 20 10 5 2 129 64 129 80 32 84 10 4 0 | out_ ArduinoPWMOutput /dev/ttyACM0 9600 210 50 5
-in_ ConstantInput 238 238 238 238 238 136 142 142 142 142 142 136 128 | out_ ArduinoPWMOutput /dev/ttyACM0 9600 150 5 20
-#in2 ArduinoPWMInput /dev/ttyACM0 9600 50 200 40 20000
-#in2 ArduinoPWMInput /dev/ttyACM0 9600 13 150 20 20000
-in3 ArduinoPWMInput /dev/ttyACM0 9600 40 210 30 20000 50
+# handle the http input
+in1_ HttpInput 8080 3
+SplitLine 1 in1 switch1 hue sat
+switch1_ Node
+
+# save the hue and sat state
+hue_ DefineLogic 1.0
+sat_ DefineLogic 1.0
+
+# handle the 433MHz input
+#  the arguments are: 
+#   PORT 
+#   BITRATE 
+#   NUMBYTES 
+#   PULSEWIDTH 
+#   CLEARCOUNT 
+#   TIMEOUTCOUNT 
+#   PULSEMARGIN
+in2_ ArduinoPWMInput /dev/ttyACM0 9600 40 210 20 20000 30 | \
+switch2_ MapNode map_in.dat 40 1 Mode exact
+
+# combine the inputs
+JoinLine switch1 switch2 binary
+# numbers smaller or equl to 0.5 are set 0, greater than 0.5 are set to 1
+# UNDEFINED numbers are left unchanged
+binary_ IfElseElseNode 0 0.5 1 | \
+switch_ ReductionNode Or # 0, UNDEFINED, or 1
+
+# write to the Philips Hue lights
+JoinLine switch hue sat ph_state
+ph_state_ Node
+ForkLine ph_state_ light1 light2 light3
+light1_ PhilipsHueOutput 192.168.1.6 T08t2C8GF9KEqXYRI8PBzb3M6vDjteT3hxdERW8z 1
+light2_ PhilipsHueOutput 192.168.1.6 T08t2C8GF9KEqXYRI8PBzb3M6vDjteT3hxdERW8z 2
+light3_ PhilipsHueOutput 192.168.1.6 T08t2C8GF9KEqXYRI8PBzb3M6vDjteT3hxdERW8z 3
+
+# write to the 433Mhz lights
+Line switch_ rf_state1
+rf_state1 MapNode map_out1.dat 1 40 Mode exact | relay1_ ArduinoPWMOutput /dev/ttyACM0 9600 210 30 10
