arduino small debugging for 433 mhz shield

--- a/tutorials/arduino/blocks.cfg
+++ b/tutorials/arduino/blocks.cfg
@@ -16,8 +16,8 @@ sat_ DefineLogic 1.0
 #   CLEARCOUNT 
 #   TIMEOUTCOUNT 
 #   PULSEMARGIN
-in2_ ArduinoPWMInput /dev/ttyACM0 9600 40 210 20 20000 30 | \
-switch2_ MapNode map_in.dat 40 1 Mode exact
+in2 ArduinoPWMInput /dev/ttyACM0 9600 40 210 20 20000 30 | \
+switch2 MapNode map_in.dat 40 1 Mode exact
 
 # combine the inputs
 JoinLine switch1 switch2 binary
@@ -35,5 +35,5 @@ light2_ PhilipsHueOutput 192.168.1.6 T08t2C8GF9KEqXYRI8PBzb3M6vDjteT3hxdERW8z 2
 light3_ PhilipsHueOutput 192.168.1.6 T08t2C8GF9KEqXYRI8PBzb3M6vDjteT3hxdERW8z 3
 
 # write to the 433Mhz lights
-Line switch_ rf_state1
-rf_state1 MapNode map_out1.dat 1 40 Mode exact | relay1_ ArduinoPWMOutput /dev/ttyACM0 9600 210 30 10
+Line switch rf_state1
+rf_state1_ MapNode map_out1.dat 1 40 Mode exact | relay1_ ArduinoPWMOutput /dev/ttyACM0 9600 210 30 10
