webbased gui and gui input block

--- a/tutorials/basic/blocks.cfg
+++ b/tutorials/basic/blocks.cfg
@@ -4,7 +4,7 @@ Line node1 delay1
 line3_ Line delay1 node2
 line4_ Line node2 out1
 #in1 ScaleInput 2.0 1.0 TimeFileInput in.dat
-in1 TimeFileInput in.dat | node3 Node
+in1 TimeInput | mn MapNode in.dat | node3 Node
 node2_ Node
 delay1_ Node
 node1_ Node
@@ -12,4 +12,4 @@ out1 FileOutput \
 out.dat# output to a file
 
 # end the program after 10 seconds
-time_ TimeStop 10s
+time_ TimeStop 3m
