--- a/tutorials/httpInput/blocks.cfg
+++ b/tutorials/httpInput/blocks.cfg
@@ -1,3 +1,8 @@
-in HttpInput 8080 1 addTimeStamp
+#in HttpInput 8080 1 addTimeStamp
+mtSet GuiInput 0
+speed GuiInput 0
+pout GuiInput 0
+toil GuiInput 20
+dig GuiInput 0 0 0 0 0 0 0 0
 
-t TimeStop 3m
+t_ TimeStop 3m
